tests/ui/validate_min_length_on_u8.stderr
error[E0277]: the trait bound `u8: AsRef<str>` is not satisfied
 --> $DIR/validate_min_length_on_u8.rs:5:13
  |
5 |     #[validate(min_length = 42)]
  |                ^^^^^^^^^^
  |                |
  |                the trait `AsRef<str>` is not implemented for `u8`
  |                required by this bound in `validate_field_asserting_type`
  |
  = note: required because of the requirements on the impl of `Validator<u8>` for `MinLengthValidator`

error[E0277]: the trait bound `MinLengthValidator: Validator<u8>` is not satisfied
 --> $DIR/validate_min_length_on_u8.rs:5:13
  |
5 |     #[validate(min_length = 42)]
  |                ^^^^^^^^^^ the trait `Validator<u8>` is not implemented for `MinLengthValidator`
  |
  = help: the following implementations were found:
            <MinLengthValidator as Validator<T>>
