tests/ui/validate_min_length_on_u8.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData {
	#[validate(min_length = 42)]
	value: u8
}

fn main() {
}
